sfdx-source/main/default/objects/VCC_SOT_User__c/VCC_SOT_User__c.object-meta.xml
<CustomObject>
    <description>The SOT User object holds the information for the users being tracked with the VAHC Service Onboarding Tracker application.</description>
    <label>SOT User</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>SOT User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SOT Users</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>