sfdx-source/main/default/objects/VCC_SOT_User__c/fields/VCC_Alias_first_last_f__c.field-meta.xml
<CustomField>
    <fullName>VCC_Alias_first_last_f__c</fullName>
    <description>firstname.lastname</description>
    <formula>LEFT(Name, FIND(&quot; &quot;, Name)-1)&amp;&quot;.&quot;&amp;MID(Name, FIND(&quot; &quot;, Name)+1, LEN(Name)-FIND(&quot; &quot;, Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alias first.last</label>
    <type>Text</type>
</CustomField>