sfdx-source/main/default/objects/VCC_SOT_User__c/fields/VCC_Cisco_Skills__c.field-meta.xml
<CustomField>
    <fullName>VCC_Cisco_Skills__c</fullName>
    <description>Displays the Cisco Skills for the SOT User.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cisco Skills</label>
    <length>255</length>
    <type>Text</type>
</CustomField>