sfdx-source/main/default/objects/VCC_SOT_User__c/fields/VCC_Extension__c.field-meta.xml
<CustomField>
    <fullName>VCC_Extension__c</fullName>
    <description>Displays the SOT User&apos;s extension.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Extension</label>
    <length>30</length>
    <type>Text</type>
</CustomField>