sfdx-source/main/default/objects/VCC_SOT_User__c/fields/VCC_Home_Site__c.field-meta.xml
<CustomField>
    <fullName>VCC_Home_Site__c</fullName>
    <description>A picklist to select the SOT User&apos;s Home Site.</description>
    <label>Home Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VCC_SOT_Sites</valueSetName>
    </valueSet>
</CustomField>