sfdx-source/main/default/objects/VCC_SOT_User__c/fields/VCC_Is_Superuser__c.field-meta.xml
<CustomField>
    <fullName>VCC_Is_Superuser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if the SOT User is a Superuser.</description>
    <label>Is Superuser?</label>
    <type>Checkbox</type>
</CustomField>