sfdx-source/main/default/objects/VCC_SOT_User__c/fields/VCC_Is_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>VCC_Is_Supervisor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if the SOT User is a Supervisor.</description>
    <label>Is Supervisor?</label>
    <type>Checkbox</type>
</CustomField>