sfdx-source/main/default/objects/VCC_SOT_User__c/fields/VCC_Language__c.field-meta.xml
<CustomField>
    <fullName>VCC_Language__c</fullName>
    <defaultValue>&quot;en_US&quot;</defaultValue>
    <description>Field to display that Language for the SOT User as per DTC Provisioning requirements.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>