sfdx-source/main/default/objects/VCC_SOT_User__c/fields/VCC_Persona__c.field-meta.xml
<CustomField>
    <fullName>VCC_Persona__c</fullName>
    <description>Field to display the Persona(s) of the SOT User.</description>
    <inlineHelpText>Select the Contact&apos;s Persona.</inlineHelpText>
    <label>Persona</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMSA</fullName>
            </value>
            <value>
                <fullName>AMSA Supervisor</fullName>
            </value>
            <value>
                <fullName>CT RN &amp; Tele-EC MP</fullName>
            </value>
            <value>
                <fullName>CT RN &amp; Tele-EC RN</fullName>
            </value>
            <value>
                <fullName>CT RN Only</fullName>
            </value>
            <value>
                <fullName>CT RN with Tele-EC Button</fullName>
            </value>
            <value>
                <fullName>CT Supervisor &amp; Tele-EC MP</fullName>
            </value>
            <value>
                <fullName>CT Supervisor &amp; Tele-EC RN</fullName>
            </value>
            <value>
                <fullName>CT Supervisor Only</fullName>
            </value>
            <value>
                <fullName>CT Supervisor with Tele-EC Button</fullName>
            </value>
            <value>
                <fullName>Integration Test Utility</fullName>
            </value>
            <value>
                <fullName>Reports Only</fullName>
            </value>
            <value>
                <fullName>Tele-EC MP</fullName>
            </value>
            <value>
                <fullName>Tele-EC RN</fullName>
            </value>
            <value>
                <fullName>Tier I Pharmacy Technician</fullName>
            </value>
            <value>
                <fullName>Tier II Pharmacy Technician</fullName>
            </value>
            <value>
                <fullName>Tier III Pharmacy Technician</fullName>
            </value>
            <value>
                <fullName>Tier I Pharmacy Technician Supervisor</fullName>
            </value>
            <value>
                <fullName>Tier II Pharmacy Technician Supervisor</fullName>
            </value>
            <value>
                <fullName>Tier III Pharmacy Technician Supervisor</fullName>
            </value>
            <value>
                <fullName>VCV CA</fullName>
            </value>
            <value>
                <fullName>VCV Lead AMSA</fullName>
            </value>
            <value>
                <fullName>VCV MP</fullName>
            </value>
            <value>
                <fullName>VCV MSA/AMSA</fullName>
            </value>
            <value>
                <fullName>View Only</fullName>
            </value>
            <value>
                <fullName>CT RN no Tele-EC,</fullName>
                <isActive>false</isActive>
                <label>CT RN no Tele-EC,</label>
            </value>
            <value>
                <fullName>CT Supervisor no Tele-EC</fullName>
                <isActive>false</isActive>
                <label>CT Supervisor no Tele-EC</label>
            </value>
            <value>
                <fullName>VCV AMSA/MSA</fullName>
                <isActive>false</isActive>
                <label>VCV AMSA/MSA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>