sfdx-source/main/default/objects/VCC_SOT_User__c/fields/VCC_Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>VCC_Profile_ID__c</fullName>
    <defaultValue>&quot;00e3d000000Lsi0&quot;</defaultValue>
    <description>Displays the SOT User&apos;s profile ID as per DTC provisioning requirements.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Profile ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>