sfdx-source/main/default/objects/VCC_SOT_User__c/fields/VCC_Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>VCC_Resource_Type__c</fullName>
    <description>Displays the Resource Type of the SOT User.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Resource Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>