sfdx-source/main/default/objects/VCC_SOT_User__c/fields/VCC_SEC_ID__c.field-meta.xml
<CustomField>
    <fullName>VCC_SEC_ID__c</fullName>
    <description>Displays the SEC ID of the SOT User</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SEC ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>