sfdx-source/main/default/objects/VCC_SOT_User__c/fields/VCC_Status__c.field-meta.xml
<CustomField>
    <fullName>VCC_Status__c</fullName>
    <description>Displays the provisioning status of the SOT User.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Frozen</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>