sfdx-source/main/default/objects/VCC_SOT_User__c/fields/VCC_TIMEZONESIDKEY1__c.field-meta.xml
<CustomField>
    <fullName>VCC_TIMEZONESIDKEY1__c</fullName>
    <description>Displays the TIMEZONESIDKEY for the SOT User based on their Home Site via the VCC SOT Assign TIMEZONESIDKEY Flow</description>
    <label>TIMEZONESIDKEY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>America/Phoenix</fullName>
            </value>
            <value>
                <fullName>America/New York</fullName>
            </value>
            <value>
                <fullName>America/Chicago</fullName>
            </value>
            <value>
                <fullName>America/Los Angeles</fullName>
            </value>
            <value>
                <fullName>America/Denver</fullName>
            </value>
            <value>
                <fullName>America/Boise</fullName>
            </value>
            <value>
                <fullName>America/Anchorage</fullName>
            </value>
            <value>
                <fullName>America/Adak</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>