sfdx-source/main/default/objects/VCC_SOT_User__c/fields/VCC_TIMEZONESIDKEY__c.field-meta.xml
<CustomField>
    <fullName>VCC_TIMEZONESIDKEY__c</fullName>
    <description>Displays the TIMEZONESIDKEY based upon the SOT User&apos;s Home Site.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TIMEZONESIDKEY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>