sfdx-source/main/default/objects/VCC_SOT_User__c/fields/VCC_User__c.field-meta.xml
<CustomField>
    <fullName>VCC_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Matches the SOT User record with a matching existing User record.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SOT_Users</relationshipName>
    <type>Lookup</type>
</CustomField>