sfdx-source/main/default/objects/VCC_SOT_User__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VCC_SEC_ID__c</columns>
    <columns>VCC_Status__c</columns>
    <columns>VCC_All_Trainings_Complete__c</columns>
    <columns>VCC_Division_VISN__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>